@@ -1,3 +1,6 @@
+AP-2008-10-20-0: Bugfix:      Fix of  AP-2008-10-17-0: adding the missing file
+                              BigDecimalField.java
+
 AP-2008-10-17-0: Bugfix:      All foreign and primary keys in db_definition.xml
                               should be defined as bigint
                  Bugster:     6717825
